infra/traefik/external-proxy/gewiscontainer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gewiscontainer
  namespace: external-proxy
spec:
  type: ExternalName
  externalName: gewiscontainer.net.gewis.nl
  ports:
    - name: ivv
      port: 9851
      protocol: TCP
      targetPort: 9851
    - name: aliaslookup
      port: 9404
      protocol: TCP
      targetPort: 9404
    - name: wiki
      port: 9676
      protocol: TCP
      targetPort: 9676
    - name: parelpracht
      port: 9639
      protocol: TCP
      targetPort: 9639
    - name: sharelatex
      port: 9195
      protocol: TCP
      targetPort: 9195
    - name: stirlingpdf
      port: 9860
      protocol: TCP
      targetPort: 9860
    - name: pgadmin
      port: 9411
      protocol: TCP
      targetPort: 9411
    - name: supremum
      port: 9501
      protocol: TCP
      targetPort: 9501
    - name: docker
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: analytics
      port: 9212
      protocol: TCP
      targetPort: 9212
    - name: analytics-test
      port: 9202
      protocol: TCP
      targetPort: 9202
    - name: xoa
      port: 9405
      protocol: TCP
      targetPort: 9405
    - name: planka
      port: 9825
      protocol: TCP
      targetPort: 9825
    - name: vaultwarden
      port: 9401
      protocol: TCP
      targetPort: 9401
    - name: sudosos
      port: 9300
      protocol: TCP
      targetPort: 9300
    - name: pkg
      port: 9001
      protocol: TCP
      targetPort: 9001
    - name: gewisweb
      port: 9210
      protocol: TCP
      targetPort: 9210
    - name: gewisweb-images
      port: 9211
      protocol: TCP
      targetPort: 9211
    - name: gewisweb-test
      port: 9200
      protocol: TCP
      targetPort: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gewiscontainer
  namespace: external-proxy
spec:
  ingressClassName: traefik
  rules:
    - host: ivv.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9851
            path: /
            pathType: Prefix
    - host: mail-api.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9404
            path: /
            pathType: Prefix
    - host: wiki.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9676
            path: /
            pathType: Prefix
    - host: gewiki.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9676
            path: /
            pathType: Prefix
    - host: parelpracht.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9639
            path: /
            pathType: Prefix
    - host: latex.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9195
            path: /
            pathType: Prefix
    - host: pdf.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9860
            path: /
            pathType: Prefix
    - host: supremum.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9501
            path: /
            pathType: Prefix
    - host: docker.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9000
            path: /
            pathType: Prefix
    - host: pgadmin.gewis.nl
      http:
        paths:
          - backend:
              middlewares:
                - name: tue-only
              service:
                name: gewiscontainer
                port:
                  number: 9411
            path: /
            pathType: Prefix
    - host: analytics.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9212
            path: /
            pathType: Prefix
    - host: analytics.test.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9202
            path: /
            pathType: Prefix
    - host: xoa.gewis.nl
      http:
        paths:
          - backend:
              middlewares:
                - name: tue-only
              service:
                name: gewiscontainer
                port:
                  number: 9405
            path: /
            pathType: Prefix
    - host: planka.gewis.nl
      http:
        paths:
          - backend:
              middlewares:
                - name: planka-headers
              service:
                name: gewiscontainer
                port:
                  number: 9825
            path: /
            pathType: Prefix
    - host: vault.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9401
            path: /
            pathType: Prefix
    - host: pkg.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9001
            path: /
            pathType: Prefix
    - host: test.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: gewiscontainer
                port:
                  number: 9200
            path: /
            pathType: Prefix
